--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -5,8 +5,10 @@
 }
 
 .logo-sidebar img{
-    max-width: 150px;
+    max-width: 100%;
     padding: 10px;
+    width: 170;
+    height: 95
 }
 
 .list-item-button {
