--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -15,7 +15,7 @@
 
 .logo img {
     max-width: 100%;
-    height: auto; /* Ensures the image maintains aspect ratio */
+    aspect-ratio: 1;
 }
 
 
