--- a/src/styles/Melting.css
+++ b/src/styles/Melting.css
@@ -3,6 +3,8 @@
     width: 100%;
     height: 100vh;
     overflow: hidden; /* Hide any overflow caused by the zoom */
+    scroll-snap-align: center;
+    
 }
 
 .melting-section-1::before {
@@ -57,4 +59,42 @@
     align-items: center;
     height: 100%;
     width: 100%;
+    transform: translateY(7vh);
 }
+
+.textSectionMelting{
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto; /* Center horizontally */
+    text-align: left; /* Center text alignment */
+}
+.imageSectionMelting{
+    margin: auto; /* Center horizontally */
+    text-align: left; /* Center text alignment */
+}
+
+.MuiTypography-root.MeltingHeading{
+    font-size: clamp(28px, 4vw, 46px);
+    font-weight: 700;
+    font-family: 'noir_proheavy';
+    color: #cd0e2d;
+    line-height: 1;
+    text-align: left;
+}
+
+.MuiTypography-root.detailsMelting{
+    padding-top: 5px;
+    font-family: 'noir_promedium';
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.4;
+    text-align: left;
+}
+/* 
+ html{
+    scroll-snap-type: y mandatory;
+    scroll-behavior: smooth;
+ } */
