--- a/src/styles/Armour.css
+++ b/src/styles/Armour.css
@@ -1,4 +1,4 @@
-.content{
+.main-content{
     background-image: url(../assets/rolling-bg-5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
